// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCellUnparseable matches snapshot not timestamp 1`] = `
<div
  class="table-cell-unparseable"
>
  unparseable
</div>
`;

exports[`TableCellUnparseable matches snapshot timestamp 1`] = `
<div
  class="table-cell-unparseable"
>
  unparseable timestamp
</div>
`;
